# stable-diffusion.cpp-restapi

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  benchmark_offload.sh  benchmark_offload_v2.sh  config.example.json  entrypoint.sh  runpod-config.json  webuiplan.md
.github/workflows/: release.yml
benchmark_results/: benchmark_results.md  offload_benchmark_20260225_154136.json  offload_benchmark_20260225_154308.json  offload_benchmark_20260225_154942.json  run_benchmark.sh
cmake/: UpdateGitVersion.cmake
data/: bootstrap_models.json  generation_options.json  load_options.json  model_architectures.json
docs/: API.md  API_REFERENCE.md  DEPENDENCIES-ubuntu22.04-cpu.md  DEPENDENCIES-ubuntu22.04-cuda.md  DEPENDENCIES-ubuntu24.04-cpu.md  DEPENDENCIES-ubuntu24.04-cuda.md  LIBRARY_REFERENCE.md  LLM_GUIDE.md  MCP.md  RUNPOD.md
docs/plans/: 2026-02-26-webui-cleanup-design.md  2026-02-26-webui-cleanup-implementation.md  2026-03-07-mcp-server-design.md
include/: api_registry.hpp  api_schema.hpp  api_schemas.hpp  architecture_manager.hpp  assistant_client.hpp  config.hpp  cuda_arch_check.hpp  download_manager.hpp  httplib_compat.h  mcp_server.hpp  memory_utils.hpp  model_manager.hpp  ollama_client.hpp  queue_item_fields.hpp  queue_manager.hpp  request_handlers.hpp  sd_error_capture.hpp  sd_wrapper.hpp  settings_manager.hpp  tool_executor.hpp  url_utils.hpp  utils.hpp  version.hpp  websocket_server.hpp
include/api_schemas/: assistant.hpp  common.hpp  generation.hpp  health.hpp  models.hpp  queue.hpp  settings.hpp
scripts/: bootstrap-models.sh  generate-api-docs.py  install.sh  sdcpp-restapi.service  streaming_tune.sh  uninstall.sh
src/: api_registry.cpp  architecture_manager.cpp  assistant_client.cpp  auth_manager.cpp  config.cpp  cuda_arch_check.cpp  download_manager.cpp  main.cpp  mcp_server.cpp  memory_utils.cpp  model_manager.cpp  ollama_client.cpp  queue_manager.cpp  request_handlers.cpp  sd_wrapper.cpp  settings_manager.cpp  stb_impl.cpp  tool_executor.cpp  url_utils.cpp  utils.cpp  websocket_server.cpp
webui/: .env.example  CMakeLists.txt  index.html  package-lock.json  package.json  vite.config.ts
webui/public/: login.css
webui/src/: App.vue  main.ts  style.css  vite-env.d.ts
webui/src/api/: client.ts
webui/src/components/: ApiOfflineOverlay.vue  Assistant.vue  AssistantQuestion.vue  AssistantSettings.vue  BackendAssignmentEditor.vue  CollapsibleSection.vue  ErrorBoundary.vue  ExpandPromptConfirmModal.vue  FloatingPreview.vue  HighlightedPrompt.vue  ImageUploader.vue  LazyImage.vue  Lightbox.vue  LoadedModelPanel.vue  LoraItem.vue  LoraPanel.vue  LoraSearch.vue  MobileTabBar.vue  Modal.vue  OllamaSettings.vue  ProgressBar.vue  PromptEnhancer.vue  RecHint.vue  ShortcutsHelpModal.vue  Sidebar.vue  SkeletonCard.vue  SkeletonList.vue  SkeletonTable.vue  StatusBar.vue  ThemeEditor.vue  ThemeSelector.vue  Toast.vue
webui/src/components/settings/: SettingField.vue  SliderField.vue  SwitchField.vue
webui/src/composables/: useArchitectures.ts  useExpandPromptModal.ts  useKeyboardShortcuts.ts  useLazyLoad.ts  useSettingsExport.ts  useTheme.ts  useVirtualScroll.ts
webui/src/services/: notifications.ts  sentry.ts  websocket.ts
webui/src/stores/: app.ts  assistant.ts
webui/src/types/: theme.ts
webui/src/utils/: typeguards.ts  validation.ts
webui/src/views/: Chat.vue  Dashboard.vue  Downloads.vue  Generate.vue  ModelLoad.vue  Models.vue  Queue.vue  RecycleBin.vue  Settings.vue  Upscale.vue
